--- a/mobile_app/index.html
+++ b/mobile_app/index.html
@@ -52,77 +52,99 @@
 </head>
 
 <body>
-    <div id="login" class="invisible">
-        <form action="" method="post">
-            <div class="form-group">
-                <label for="exampleInputEmail1">Email address</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                    placeholder="Enter email">
-            </div>
-            <div class="form-group">
-                <label for="exampleInputPassword1">Password</label>
-                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-            </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
+    <div id="login">
+        <div class="form-group">
+            <label for="email-mobile">Email address</label>
+            <input type="email" class="form-control" id="email-mobile" name="emailText" aria-describedby="emailHelp"
+                placeholder="Enter email">
+        </div>
+        <div class="form-group">
+            <label for="password-mobile">Password</label>
+            <input type="password" class="form-control" id="password-mobile" name="passwordText" placeholder="Password">
+        </div>
+        <button id="login-btn" class="btn btn-primary">Login</button>
     </div>
 
     <div id="scan">
-        <b>Detected QR code: </b>
-        <span id="cam-qr-result">None</span>
-        <br>
-        <div id="video-container">
-            <video id="qr-video"></video>
-        </div>
-        <button id="start-button" class="btn btn-primary">Start</button>
-        <button id="stop-button" class="btn btn-primary">Stop</button>
+
     </div>
 
     <script type="module">
         import QrScanner from '/mobile_app/node_modules/qr-scanner/qr-scanner.min.js';
 
-        const video = document.getElementById('qr-video');
-        const camList = document.getElementById('cam-list');
-        const camQrResult = document.getElementById('cam-qr-result');
+        const loginBtn = document.getElementById("login-btn");
+        const email = document.getElementById("email-mobile");
+        const password = document.getElementById("password-mobile");
+        const SITE_URL = document.location.origin;
+        const login = document.getElementById("login");
+        const scan = document.getElementById("scan");
 
-        function setResult(label, result) {
-            console.log(result.data);
-            label.textContent = result.data;
-            label.style.color = 'teal';
-            clearTimeout(label.highlightTimeout);
-            label.highlightTimeout = setTimeout(() => label.style.color = 'inherit', 100);
-            window.location.replace(result.data);
+        loginBtn.onclick = function () {
+            if (email.value.length != 0 && password.value.length != 0) {
+                fetch(SITE_URL + '/api/login?email=' + email.value + '&password=' + password.value, {
+                    method: 'GET'
+                })
+                    .then(response => {
+                        console.log(response.status);
+                        if (!response.ok) {
+                            throw new Error("HTTP status " + response.status);
+                        }
+                        return response.json();
+                    })
+                    .then(json => {
+                        console.log(json);
+                        login.classList.add("invisible");
+
+                        scan.innerHTML = "<b>Detected QR code: </b><span id=\"cam-qr-result\">None</span><br><div id=\"video-container\"><video id=\"qr-video\"></video></div><button id=\"start-button\" class=\"btn btn-primary\">Start</button> <button id=\"stop-button\" class=\"btn btn-primary\">Stop</button>";
+                        qrScan();
+
+                    })
+            };
         }
 
-        const scanner = new QrScanner(video, result => setResult(camQrResult, result), {
-            onDecodeError: error => {
-                camQrResult.textContent = error;
-                camQrResult.style.color = 'inherit';
-            },
-            highlightScanRegion: true,
-            highlightCodeOutline: true,
-            maxScansPerSecond: 1
-        });
+        function qrScan() {
+            const video = document.getElementById('qr-video');
+            const camList = document.getElementById('cam-list');
+            const camQrResult = document.getElementById('cam-qr-result');
 
-        scanner.start().then(() => {
-            QrScanner.listCameras(true).then(cameras => cameras.forEach(camera => {
-                const option = document.createElement('option');
-                option.value = camera.id;
-                option.text = camera.label;
-                // camList.add(option);
-            }));
-        });
+            function setResult(label, result) {
+                console.log(result.data);
+                label.textContent = result.data;
+                label.style.color = 'teal';
+                clearTimeout(label.highlightTimeout);
+                label.highlightTimeout = setTimeout(() => label.style.color = 'inherit', 100);
+                window.location.replace(result.data);
+            }
 
-        window.scanner = scanner;
+            const scanner = new QrScanner(video, result => setResult(camQrResult, result), {
+                onDecodeError: error => {
+                    camQrResult.textContent = error;
+                    camQrResult.style.color = 'inherit';
+                },
+                highlightScanRegion: true,
+                highlightCodeOutline: true,
+                maxScansPerSecond: 1
+            });
 
-        document.getElementById('start-button').addEventListener('click', () => {
-            scanner.start();
-        });
+            window.scanner = scanner;
 
-        document.getElementById('stop-button').addEventListener('click', () => {
-            scanner.stop();
-        });
+            scanner.start().then(() => {
+                QrScanner.listCameras(true).then(cameras => cameras.forEach(camera => {
+                    const option = document.createElement('option');
+                    option.value = camera.id;
+                    option.text = camera.label;
+                    // camList.add(option);
+                }));
+            });
 
+            document.getElementById('start-button').addEventListener('click', () => {
+                scanner.start();
+            });
+
+            document.getElementById('stop-button').addEventListener('click', () => {
+                scanner.stop();
+            });
+        }
     </script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
