--- a/mobile_app/index.html
+++ b/mobile_app/index.html
@@ -69,6 +69,10 @@
 
     </div>
 
+    <div id="success">
+
+    </div>
+
     <script type="module">
         import QrScanner from '/mobile_app/node_modules/qr-scanner/qr-scanner.min.js';
 
@@ -78,6 +82,7 @@
         const SITE_URL = document.location.origin;
         const login = document.getElementById("login");
         const scan = document.getElementById("scan");
+        const success = document.getElementById("success");
 
         loginBtn.onclick = function () {
             if (email.value.length != 0 && password.value.length != 0) {
@@ -85,7 +90,6 @@
                     method: 'GET'
                 })
                     .then(response => {
-                        console.log(response.status);
                         if (!response.ok) {
                             throw new Error("HTTP status " + response.status);
                         }
@@ -96,24 +100,36 @@
                         login.classList.add("invisible");
 
                         scan.innerHTML = "<b>Detected QR code: </b><span id=\"cam-qr-result\">None</span><br><div id=\"video-container\"><video id=\"qr-video\"></video></div><button id=\"start-button\" class=\"btn btn-primary\">Start</button> <button id=\"stop-button\" class=\"btn btn-primary\">Stop</button>";
-                        qrScan();
+                        qrScan(json.id);
 
                     })
             };
         }
 
-        function qrScan() {
+        function qrScan(id) {
             const video = document.getElementById('qr-video');
             const camList = document.getElementById('cam-list');
             const camQrResult = document.getElementById('cam-qr-result');
 
             function setResult(label, result) {
-                console.log(result.data);
-                label.textContent = result.data;
-                label.style.color = 'teal';
-                clearTimeout(label.highlightTimeout);
-                label.highlightTimeout = setTimeout(() => label.style.color = 'inherit', 100);
-                window.location.replace(result.data);
+                let token = result.data;
+                console.log(token);
+
+                fetch(SITE_URL + '/api/join?token=' + token + '&id=' + id, {
+                    method: 'PATCH'
+                })
+                .then(response => {
+                        if (!response.ok) {
+                            throw new Error("HTTP status " + response.status);
+                        }
+                        return response.json();
+                    })
+                .then(json => {
+                    console.log(json);
+                    scan.innerHTML = "";
+                    success.innerHTML = "<center><p>Your arrival has been saved.</p><p>Enjoy your stay!</p></center>";
+                    //untested - api 100% works, not sure about JS
+                })
             }
 
             const scanner = new QrScanner(video, result => setResult(camQrResult, result), {
