--- a/mobile_app/index.html
+++ b/mobile_app/index.html
@@ -65,6 +65,16 @@
         <button id="login-btn" class="btn btn-primary">Login</button>
     </div>
 
+    <div id="home" class="invisible">
+        <h2 id="user-welcome"></h2>
+        <button class="btn btn-primary" id="listBtn">List</button>
+        <button class="btn btn-primary" id="scanBtn">Scan</button>
+    </div>
+
+    <div id="list" class="invisible">
+
+    </div>
+
     <div id="scan">
 
     </div>
@@ -82,7 +92,12 @@
         const SITE_URL = document.location.origin;
         const login = document.getElementById("login");
         const scan = document.getElementById("scan");
+        const home = document.getElementById("home");
         const success = document.getElementById("success");
+        const userWelcome = document.getElementById("user-welcome");
+        const list = document.getElementById("list");
+        // const usersSelect = document.getElementById("users-list");
+        var user = {};
 
         loginBtn.onclick = function () {
             if (email.value.length != 0 && password.value.length != 0) {
@@ -98,15 +113,15 @@
                     .then(json => {
                         console.log(json);
                         login.classList.add("invisible");
-
-                        scan.innerHTML = "<b>Detected QR code: </b><span id=\"cam-qr-result\">None</span><br><div id=\"video-container\"><video id=\"qr-video\"></video></div><button id=\"start-button\" class=\"btn btn-primary\">Start</button> <button id=\"stop-button\" class=\"btn btn-primary\">Stop</button>";
-                        qrScan(json.id);
-
+                        home.classList.remove("invisible");
+                        user = json;
+                        userWelcome.innerText = "Welcome, " + user.firstname + ' ' + user.lastname + '!';
                     })
             };
         }
 
         function qrScan(id) {
+            scan.innerHTML = "<b>Detected QR code: </b><span id=\"cam-qr-result\">None</span><br><div id=\"video-container\"><video id=\"qr-video\"></video></div><button id=\"start-button\" class=\"btn btn-primary\">Start</button> <button id=\"stop-button\" class=\"btn btn-primary\">Stop</button>";
             const video = document.getElementById('qr-video');
             const camList = document.getElementById('cam-list');
             const camQrResult = document.getElementById('cam-qr-result');
@@ -118,18 +133,18 @@
                 fetch(SITE_URL + '/api/join?token=' + token + '&id=' + id, {
                     method: 'PATCH'
                 })
-                .then(response => {
+                    .then(response => {
                         if (!response.ok) {
                             throw new Error("HTTP status " + response.status);
                         }
                         return response.json();
                     })
-                .then(json => {
-                    console.log(json);
-                    scan.innerHTML = "";
-                    success.innerHTML = "<center><p>Your arrival has been saved.</p><p>Enjoy your stay!</p></center>";
-                    //untested - api 100% works, not sure about JS
-                })
+                    .then(json => {
+                        console.log(json);
+                        scan.innerHTML = "";
+                        success.innerHTML = "<center><p>Your arrival has been saved.</p><p>Enjoy your stay!</p></center>";
+                        //untested - api 100% works, not sure about JS
+                    })
             }
 
             const scanner = new QrScanner(video, result => setResult(camQrResult, result), {
@@ -161,6 +176,39 @@
                 scanner.stop();
             });
         }
+
+        document.getElementById('scanBtn').addEventListener('click', () => {
+            qrScan(user.id);
+            console.log(user);
+        });
+
+        document.getElementById('listBtn').addEventListener('click', () => {
+            scan.innerHTML = "";
+            list.innerHTML = "";
+
+            fetch(SITE_URL + '/api/users', {
+                method: 'GET'
+            })
+                .then(response => {
+                    if (!response.ok) {
+                        throw new Error("HTTP status " + response.status);
+                    }
+                    return response.json();
+                })
+                .then(json => {
+                    list.classList.remove("invisible");
+                    list.innerHTML = "<div id='usersList'></div>";
+                    json.forEach(element => {
+                        usersList.innerHTML += "<p>" + element.firstname + ' ' + element.lastname +"</p>";
+                    });
+                    
+                })
+        });
+
+        document.getElementById('usersSelect').addEventListener('change', () => {
+            
+        });
+
     </script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
