--- a/mobile_app/index.html
+++ b/mobile_app/index.html
@@ -139,7 +139,7 @@
         const loginBtn = document.getElementById("login-btn");
         const email = document.getElementById("email-mobile");
         const password = document.getElementById("password-mobile");
-        const SITE_URL = 'https://adminers.stud.vts.su.ac.rs';
+        const SITE_URL = document.location.origin;
         const login = document.getElementById("login");
         const autologin = document.getElementById("auto-login");
         const scan = document.getElementById("scan");
