Oh you're not a man not even a boy you cant comprehend

--- a/mobile_app/index.html
+++ b/mobile_app/index.html
@@ -172,7 +172,9 @@
         logout.onclick = () => {
             localStorage.removeItem('__login');
             if (window.Android) {
-                Android.refreshPLS();
+                setTimeout(() => {
+                    Android.refreshPLS();
+                }, 1000);
             } else {
                 location.reload();
             }
