drown my demons in a field of battle tears donkt know how much longer i can keep this down

--- a/mobile_app/index.html
+++ b/mobile_app/index.html
@@ -200,7 +200,7 @@
                         login.classList.add("invisible");
                         home.classList.remove("invisible");
                         user = json;
-                        userWelcome.innerText = "Welcome, " + user.firstname + ' ' + user.lastname + '!';
+                        userWelcome.innerText = user.firstname + ' ' + user.lastname + '!';
                         if (rememberme.checked) {
                             localStorage.setItem('__login', JSON.stringify(user));
                         }
