--- a/mobile_app/index.html
+++ b/mobile_app/index.html
@@ -9,8 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <style>
-        :root,
-        * {
+        :root, * {
             --primary: #e60f00 !important;
             --text: #eee !important;
         }
@@ -80,8 +79,7 @@
         <h1 id="main-logo">Vizyt</h1>
         <div class="form-group">
             <label for="email-mobile">Email address</label>
-            <input type="email" class="form-control" id="email-mobile" name="emailText" aria-describedby="emailHelp"
-                placeholder="Enter email">
+            <input type="email" class="form-control" id="email-mobile" name="emailText" aria-describedby="emailHelp" placeholder="Enter email">
         </div>
         <div class="form-group">
             <label for="password-mobile">Password</label>
